kubernetes/manifests/web-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    name: web
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    name: web
